auto focus added

--- a/src/index.html
+++ b/src/index.html
@@ -34,7 +34,7 @@
 
 <div class="mb-3">
     <label class="fw-bold">Asset ID:</label>
-    <input type="text" class="form-control d-inline w-auto bg-warning">
+    <input type="text" class="form-control d-inline w-auto bg-warning" autofocus>
 </div>
 
 <!-- Transaction Section -->
