--- a/src/index.html
+++ b/src/index.html
@@ -4,22 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mock UI</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        .bg-warning-custom { background-color: yellow; }
-        .bg-success-custom { background-color: lightgreen; }
-        .text-end { text-align: end; }
-        .custom-alert {
-            max-width: 300px;
-            height: 38px; /* Adjust the height to match the input field's height */
-            display: flex;
-            align-items: center; /* Vertically center the text */
-            padding: 7px 10px;
-        }
-        .form-control {
-            height: 38px; /* Ensure the input field has the same height */
-        }
-    </style>
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
 </head>
 <body class="container mt-3">
 
@@ -121,48 +107,7 @@
     </tr>
     </tbody>
 </table>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    const assetIdInput = document.getElementById('assetId');
-    const messageDiv = document.getElementById('message');
-    const messageSuccessDiv = document.getElementById('message-success');
-
-    assetIdInput.addEventListener('input', function () {
-        const assetId = assetIdInput.value.trim();
-
-        if (assetId === '100') {
-            // Show error message and play error sound
-            assetIdInput.classList.add('is-invalid');
-            assetIdInput.classList.remove('is-valid');
-            messageDiv.textContent = "Error: Invalid Asset ID.";
-            messageDiv.style.display = 'block';  // Show error message
-            messageSuccessDiv.style.display = 'none';  // Hide success message
-            playErrorSound();
-        } else if (assetId === '200') {
-            // Show success message and play success sound
-            assetIdInput.classList.add('is-valid');
-            assetIdInput.classList.remove('is-invalid');
-            messageSuccessDiv.textContent = "Success: Asset ID is valid.";
-            messageSuccessDiv.style.display = 'block';  // Show success message
-            messageDiv.style.display = 'none';  // Hide error message
-            playSuccessSound();
-        } else {
-            // Reset form and hide both messages
-            assetIdInput.classList.remove('is-invalid', 'is-valid');
-            messageDiv.style.display = 'none';
-            messageSuccessDiv.style.display = 'none';
-        }
-    });
-
-    function playErrorSound() {
-        const errorSound = new Audio('./assets/sounds/error-sound.mp3'); // Make sure you have an error sound file.
-        errorSound.play();
-    }
-
-    function playSuccessSound() {
-        const successSound = new Audio('./assets/sounds/success-sound.mp3'); // Make sure you have a success sound file.
-        successSound.play();
-    }
-</script>
+<script src="assets/js/bootstrap.bundle.min.js"></script>
+<script src="assets/js/main.js"></script>
 </body>
 </html>
